<resources>
    <string name="app_name">P01-DailyGoals</string>
    <string name="tv">Read up on materials before class</string>
    <string name="tv2">Did I achieve this goal today?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tv3">Arrive on time so as to not miss important part of the lesson</string>
    <string name="tv5">Attempt the problem myself</string>
    <string name="tv7">My personal reflection today</string>
    <string name="btnDone">OK</string>
</resources>
